  * Removed delegate info from `cs minipool status` since it is not relevant for Constellation node operators.
  * The `service config` validation routine will now work properly if you don't have any of the default MEV-Boost relays enabled but do have your own custom relays.

 -- NodeSet Inc. <info@nodeset.io>  Sat, 26 Oct 2024 08:58:43 +0000

hyperdrive (1.1.0) stable; urgency=medium

  * Improved error handling on nodeset.io requests to provide more information on what's wrong.
  * Increased the task cooldown when the system is not ready yet to 15 seconds.
  * Fixed a bug that erroneously printed log warnings about validators with already-uploaded signed exits not being included when uploading a new signed exit.
  * Added `cs network stats` to view info about the Constellation settings and deposit pool status.
  * `cs minipool create` once again saves the validator pubkey before sending the TX.
  * Fixed the text on `cs minipool exit`.

 -- NodeSet Inc. <info@nodeset.io>  Tue, 15 Oct 2024 21:22:15 +0000

hyperdrive (1.1.0~rc1) unstable; urgency=medium

  * Updated Nethermind, Teku, and MEV-Boost.
  * Signed exit messages are now encrypted locally before being sent to nodeset.io.
  * The CLI now ensures the existence of daemon JWT authentication keys on every command for enhanced backwards compatibility.

 -- NodeSet Inc. <info@nodeset.io>  Tue, 08 Oct 2024 20:31:38 +0000

hyperdrive (1.1.0~b2) unstable; urgency=medium

  * Updated Geth, Reth, and Nimbus.
  * The daemon API servers now require JWT authentication.
  * Enabling MEV-Boost while using externally-managed clients in the config TUI now prompts the user to ensure that MEV-Boost is enabled on the Beacon Node.
  * Added a config parameter to control the timeout for HTTP requests.
  * `hyperdrive service install` now works properly when upgrading from v1.0.1 to v1.1.0.